# llm_wiki_cli

./: .gitignore  README.md  README_CN.md  README_JA.md  package.json  vitest.cli.config.ts
.github/workflows/: cli.yml
cli/: index.ts
cli/commands/: caption.ts  chat.ts  clip.ts  config.ts  embed.ts  enrich.ts  graph.ts  help.ts  ingest.test.ts  ingest.ts  init.ts  lint.ts  maintenance.ts  open-folder.ts  open.ts  pages.ts  read.ts  research.ts  review.ts  schedule-import.ts  search.ts  serve.ts  source-delete.test.ts  source-delete.ts  sources.ts  sync.ts  test.ts  wiki-delete.test.ts  wiki-delete.ts  write.ts
cli/integration/: project-lifecycle.integration.test.ts
cli/lib/: azure-openai.test.ts  azure-openai.ts  config-store.test.ts  config-store.ts  context-budget.test.ts  context-budget.ts  detect-language.test.ts  detect-language.ts  document-extract.test.ts  document-extract.ts  embedding.test.ts  embedding.ts  frontmatter.test.ts  frontmatter.ts  fs-adapter.test.ts  fs-adapter.ts  graph-insights.test.ts  graph-insights.ts  graph-relevance.ts  greeting-detector.test.ts  greeting-detector.ts  ingest-cache.test.ts  ingest-cache.ts  ingest-parse.test.ts  ingest-parse.ts  ingest-sanitize.test.ts  ingest-sanitize.ts  language-metadata.test.ts  language-metadata.ts  lint-engine.test.ts  lint-engine.ts  llm-client.test.ts  llm-client.ts  native-bridge.test.ts  (+36 more)
demo/: README.md  run-demo.ps1  run-demo.sh
docs/: CLI.zh-CN.md
native/: Cargo.toml  README.md
native/src/: clip.rs  extract.rs  main.rs  pdfium_util.rs
scripts/: build-native.ps1  build-native.sh
(+3 files in other folders)
